--- a/style.css
+++ b/style.css
@@ -5,22 +5,42 @@
 }
 .wrapper{
     width: 100%;
-    min-height: 640px; 
-    padding-top: 100px;
+    min-height: 500px; 
+    margin-top: 100px;
     text-align: center;
+    position: relative;
 }
 
 .middle{
     display: block;
     margin: 0 auto;
 }
+.options{
+    text-align:center;
+    width: 100%;
+    height: 100%;
+    font-size: 22px;
+    z-index: 2;
+    position: absolute;
+    top:20px;
+}
 .matrix{
-    width:400px;
-    height:400px;
-    overflow:auto;
+    overflow:hidden;
     background: #656D78;
     padding: 8px;
     position: relative;
+}
+.slide{
+    background:white;
+    position: relative;
+    opacity: 0;
+    margin-bottom: 60px;
+    overflow: hidden;
+    
+}
+.show{
+    opacity: 1;
+    z-index: 3;
 }
 .start p{
     color: white;
@@ -46,8 +66,8 @@
     
 }
 .tile{
-    width:calc(25% - 10px);
-    height:calc(25% - 10px);
+    width:80px;
+    height:80px;
     float: right;
     cursor: pointer;
     background:inherit;
@@ -75,7 +95,6 @@
     transform: scale(1.2);
 }
 .matrix-info{
-    width:400px;
     padding:10px 5px;
     overflow: hidden;
 }
@@ -121,24 +140,75 @@
 .front:hover{
     background: #E6E9ED;
 }
-footer{
-    width: 100%;
-    background: deepskyblue;
-    height: 60px;
+.btn{
+    font-family: 'Work Sans', sans-serif;
+    font-size: 22px;
+    background-color:deepskyblue;
+    color: #fff;
+    border: 0px;
+    border-radius: 3px;
+    padding: 10px 20px;
+    cursor: pointer;
+    margin-top: 15px;
+}
+.title{
+    font-size:30px;
+    font-weight: normal;
+    color: #333;
     padding: 20px;
-    color: white;
-    font-weight: bold;
-    text-align: center;
 }
-footer a:active,a,a:hover{
-    color:white;
-}
-@media(max-width:400px){
-    .matrix{
-       width: 250px;
-       height: 250px;
-    }
-    .start p{
-        margin-top:40%;
-    }
-}
+.radio-container {
+    position: relative;
+    padding-left: 35px;
+    cursor: pointer;
+    font-size: 22px;
+    margin:0 10px;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+  }
+  .radio-container input {
+    position: absolute;
+    opacity: 0;
+  }
+  .checkmark {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 25px;
+    width: 25px;
+    background-color: #ddd;
+    border-radius: 50%;
+  }
+  .radio-container:hover input ~ .checkmark {
+    background-color: #ccc;
+  }
+  .radio-container input:checked ~ .checkmark {
+    background-color: #656D78;
+  }
+  .checkmark:after {
+    content: "";
+    position: absolute;
+    display: none;
+    top: 9px;
+    left: 9px;
+    width: 8px;
+    height: 8px;
+    border-radius: 50%;
+    background: white;
+  }
+  .radio-container input:checked ~ .checkmark:after {
+    display: block;
+  }
+  .h-float-left{
+      float:left;
+  }
+  .github-link{
+    font-size: 30px;
+    color: #333;
+    display: block;
+    position: absolute;
+    top: 10px;
+    left: 10px;
+  }
